HelloWorld/kube-config/stateless-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-windows-stateless
spec:
  replicas: 3
  selector:
    matchLabels:
      app: test-windows-stateless
  template:
    metadata:
      labels:
        app: test-windows-stateless
      name: test-windows-stateless
    spec:
      containers:
      - image: tkgiacr.azurecr.io/helloworld:latest
        imagePullPolicy: Always
        name: test-windows-stateless
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
      imagePullSecrets:
      - name: azure-acr
      tolerations:
      - key: "windows"
        operator: "Exists"
        effect: "NoSchedule"
