HelloWorld/kube-config/stateless-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-windows-stateless-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /stateless
        backend:
          serviceName: test-windows-stateless-service
          servicePort: 80
